--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  fluro: ^1.5.1  #路由组件
+  json_annotation: ^2.3.0
+  dio: ^2.1.7
+  event_bus: ^1.1.0
+  flutter_html: ^0.10.4
+  fluttertoast: ^3.1.0
+  shared_preferences: ^0.5.3+4
+  cached_network_image: ^1.1.1
+  flutter_screenutil: ^0.5.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -56,6 +64,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: RuZhouIcons
+      fonts:
+        - asset: lib/assets/icons/iconfont.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
