--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   shared_preferences: ^0.5.3+4
   cached_network_image: ^1.1.1
   flutter_screenutil: ^0.5.3
-  flutter_easyrefresh: ^2.0.3
+  flutter_easyrefresh: ^2.0.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -68,7 +68,7 @@ flutter:
   fonts:
     - family: RuZhouIcons
       fonts:
-        - asset: lib/assets/icons/iconfont.ttf
+        - asset: assets/icons/iconfont.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -83,3 +83,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+    - assets/image/
