--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cached_network_image: ^1.1.1
   flutter_screenutil: ^0.5.3
   flutter_easyrefresh: ^2.0.4
+  flutter_local_notifications: ^0.8.4
+  jstomp: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
