--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
