--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ dependencies:
   cached_network_image: ^1.1.1
   flutter_screenutil: ^0.5.3
   flutter_easyrefresh: ^2.0.4
-  flutter_local_notifications: ^0.8.4
+  #flutter_local_notifications: ^0.8.4
   jstomp: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # Dart 常用工具类库 https://github.com/Sky24n/common_utils
+  common_utils: ^1.1.3
 
 dev_dependencies:
   flutter_test:
@@ -87,3 +89,4 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/image/
+    - assets/image/nav/
