--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   dio: ^2.1.7
   event_bus: ^1.1.0
   flutter_html: ^0.10.4
-  fluttertoast: ^3.1.0
+  #fluttertoast: ^3.1.0
+  # Toast插件 https://github.com/OpenFlutter/flutter_oktoast
+  oktoast: ^2.2.0
   shared_preferences: ^0.5.3+4
   cached_network_image: ^1.1.1
   flutter_screenutil: ^0.5.3
@@ -36,6 +38,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   # Dart 常用工具类库 https://github.com/Sky24n/common_utils
   common_utils: ^1.1.3
+    # 图片选择插件 https://github.com/flutter/plugins/tree/master/packages/image_picker
+  image_picker: 0.6.1+8
 
 dev_dependencies:
   flutter_test:
