--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_screenutil: ^0.5.3
   flutter_easyrefresh: ^2.0.4
   #flutter_local_notifications: ^0.8.4
-  jstomp: ^1.1.0
+  #jstomp: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
