--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   # Dart 常用工具类库 https://github.com/Sky24n/common_utils
   common_utils: ^1.1.3
     # 图片选择插件 https://github.com/flutter/plugins/tree/master/packages/image_picker
-  image_picker: 0.6.1+8
+  image_picker: ^0.6.1+11
 
 dev_dependencies:
   flutter_test:
