--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,6 +37,8 @@
     <array>
         <string>remote-notification</string>
     </array>
+    <key>io.flutter.embedded_views_preview</key>
+    <string>YES</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
