--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   keyboard_actions: ^2.1.2
   #图片预览
   photo_view: ^0.4.2
+  # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
+  webview_flutter: 0.3.15+1
 
 dev_dependencies:
   flutter_test:
