--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   photo_view: ^0.4.2
   # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
   webview_flutter: 0.3.15+1
+  flutter_spinkit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
