--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   fluro: ^1.5.1  #路由组件
   json_annotation: ^2.3.0
   dio: ^2.1.7
@@ -47,6 +49,7 @@ dependencies:
   # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
   webview_flutter: 0.3.15+1
   flutter_spinkit: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
