--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
   webview_flutter: 0.3.15+1
   flutter_spinkit: ^3.1.0
-
+  provider: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
