--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,10 @@ dependencies:
   keyboard_actions: ^2.1.2
   #图片预览
   photo_view: ^0.4.2
-  # WebView插件 https://github.com/flutter/plugins/tree/master/packages/webview_flutter
-  webview_flutter: 0.3.15+1
   flutter_spinkit: ^3.1.0
   provider: ^3.0.0+1
+  webview_flutter: ^0.3.15
+  flutter_inappbrowser: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -104,3 +104,5 @@ flutter:
   assets:
     - assets/image/
     - assets/image/nav/
+    - assets/html/shuiyin.html
+    - assets/html/js/shuiyin.js
