优化web_view组件，更改程序主题色，将所有title调整至中间

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,5 +104,4 @@ flutter:
   assets:
     - assets/image/
     - assets/image/nav/
-    - assets/html/shuiyin.html
-    - assets/html/js/shuiyin.js
+    - assets/html/loginAgr.html
