--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: RuZhouIcons
+    - family: MyIcons
       fonts:
         - asset: assets/icons/iconfont.ttf
   # fonts:
