--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   provider: ^3.0.0+1
   webview_flutter: ^0.3.15
   flutter_inappbrowser: ^2.0.0
+  # Flutter 常用工具类库 https://github.com/Sky24n/flustars
+  flustars: 0.2.6+1
+  # https://github.com/ReactiveX/rxdart
+  rxdart: ^0.22.4
 
 dev_dependencies:
   flutter_test:
