--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flustars: 0.2.6+1
   # https://github.com/ReactiveX/rxdart
   rxdart: ^0.22.4
+  device_id: ^0.2.0
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
